[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylink-pro"  # Updated project name
version = "0.1.0"
description = "A robust linking framework for seamless API integration"  # More descriptive
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0.0",        # For the core web framework
    "requests>=2.28.0",    # Useful for API calls
    "pydantic>=1.10.0",    # Data validation and parsing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",          # Testing framework
    "pytest-cov>=4.0",      # Coverage reporting
    "black>=23.0",          # Code formatter
    "flake8>=6.0",          # Linting
    "flake8-pyproject>=1.2.3",  # Flake8 config support in pyproject.toml
    "autopep8>=2.0.4",      # Additional auto-formatting
    "pre-commit>=3.0",      # Pre-commit hooks for code quality
    "mypy>=1.0",            # Type checking
]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]  # To align with Black formatting
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv"
]
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"  # Shows summary of tests; adjust if you want coverage reporting
testpaths = [
    "tests",
]


[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
strict = true